CSS fixes for search field and button border issues on iOS

--- a/client/common/sass/components/_buttons.sass
+++ b/client/common/sass/components/_buttons.sass
@@ -29,7 +29,8 @@
 			content: url(../icons/arrow-left.svg)
 			height: 24px
 			width: 16px
-			border: 3px solid
+			// 2.95px fixes border overlap issue on iOS
+			border: 2.95px solid
 			border-color: $black
 			position: absolute
 			right: -3px
