--- a/client/common/sass/components/_text-field.sass
+++ b/client/common/sass/components/_text-field.sass
@@ -31,3 +31,5 @@
 		padding: 13px 24px
 		font-style: italic
 		font-size: $font-size-small-p
+		-webkit-appearance: none
+		border-radius: 0
